--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "gatsby": "^3.9.1",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^4.9.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.35.2"
+    "react-icons": "^4.2.0",
+    "sass": "^1.35.2",
+    "styled-components": "^5.3.0"
   }
 }
