--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-slick": "^0.28.1",
     "sass": "^1.35.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   }
 }
