--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -23,6 +24,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
+    "react-floating-label-input": "^4.3.2",
+    "react-google-recaptcha-v3": "^1.9.5",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
     "sass": "^1.35.2",
