--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "bootstrap": "^5.0.2",
     "emailjs-com": "^3.2.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^4.9.0",
+    "gatsby-plugin-styled-components": "^4.10.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
