--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-floating-label-input": "^4.3.2",
     "react-google-recaptcha-v3": "^1.9.5",
     "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.28.1",
     "sass": "^1.35.2",
     "slick-carousel": "^1.8.1",
