--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.0.2",
     "emailjs-com": "^3.2.0",
     "gatsby": "^3.9.1",
+    "gatsby-plugin-env-variables": "^2.1.0",
     "gatsby-plugin-gatsby-cloud": "^2.10.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^4.9.0",
